fix casing on xpath

--- a/analyzer-lsp-rules/rules/rules-reviewed/azure/azure-password.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/azure/azure-password.windup.yaml
@@ -7,6 +7,6 @@
           filename: application{*}.{extensions}
           pattern: '{password}'
       - xml:
-          XPath: //password
+          xpath: //password
       - xml:
-          XPath: //*[@name='Password']
+          xpath: //*[@name='Password']
