--- a/analyzer-lsp-rules/rules/rules-reviewed/camel3/camel2/xml-removed-components.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/camel3/camel2/xml-removed-components.windup.yaml
@@ -59,9 +59,9 @@
           filename: '{*}.java'
           pattern: from("twitter-streaming:{*}
       - xml:
-          XPath: //*/c:from/@uri[windup:matches(self::node(), 'twitter-streaming:{*}')]
+          xpath: //*/c:from/@uri[windup:matches(self::node(), 'twitter-streaming:{*}')]
       - xml:
-          XPath: //*/c:from/@uri[windup:matches(self::node(), 'twitter-streaming:{*}')]
+          xpath: //*/c:from/@uri[windup:matches(self::node(), 'twitter-streaming:{*}')]
   - message: '`org.apache.camel:camel-restlet` artifact has been deprecated in Apache
       Camel 2 and removed in Apache Camel 3. Use any of the other REST capable components,
       such as `camel-rest`, `camel-jetty`, `camel-netty-http` or `camel-undertow`'
@@ -87,14 +87,14 @@
     when:
       or:
       - xml:
-          XPath: /m:project/m:build/m:plugins/m:plugin[m:groupId='org.apache.camel'
-            and m:artifactId='camel-maven-plugin']/m:executions/m:execution/m:goals[m:goal='validate'
-            or m:goal='route-coverage']
           filepaths:
           - pom.xml
+          xpath: /m:project/m:build/m:plugins/m:plugin[m:groupId='org.apache.camel'
+            and m:artifactId='camel-maven-plugin']/m:executions/m:execution/m:goals[m:goal='validate'
+            or m:goal='route-coverage']
       - xml:
-          XPath: /m:project/m:profiles/m:profile/m:build/m:plugins/m:plugin[m:groupId='org.apache.camel'
-            and m:artifactId='camel-maven-plugin']/m:executions/m:execution/m:goals[m:goal='validate'
-            or m:goal='route-coverage']
           filepaths:
           - pom.xml
+          xpath: /m:project/m:profiles/m:profile/m:build/m:plugins/m:plugin[m:groupId='org.apache.camel'
+            and m:artifactId='camel-maven-plugin']/m:executions/m:execution/m:goals[m:goal='validate'
+            or m:goal='route-coverage']
