--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/glassfish/xml-glassfish.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/glassfish/xml-glassfish.windup.yaml
@@ -1,19 +1,11 @@
-- - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/glassfish/xml-glassfish.windup.xml-0
+- - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/glassfish/xml-glassfish.windup.xml-1
     tag:
     - configuration
     when:
       as: default
       ignore: true
       xml:
-        XPath: ""
-  - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/glassfish/xml-glassfish.windup.xml-1
-    tag:
-    - configuration
-    when:
-      as: default
-      ignore: true
-      xml:
-        XPath: /glassfish-ejb-jar
+        xpath: /glassfish-ejb-jar
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/glassfish/xml-glassfish.windup.xml-2
     tag:
     - configuration
@@ -21,4 +13,4 @@
       as: default
       ignore: true
       xml:
-        XPath: /glassfish-application
+        xpath: /glassfish-application
