--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.yaml
@@ -4,14 +4,14 @@
     - jsf
     when:
       xml:
-        XPath: //*[namespace-uri()='http://jboss.com/products/seam/taglib']
+        xpath: //*[namespace-uri()='http://jboss.com/products/seam/taglib']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-1
     tag:
     - seam
     - jsf
     when:
       xml:
-        XPath: //*[namespace-uri()='http://jboss.org/schema/seam/taglib']
+        xpath: //*[namespace-uri()='http://jboss.org/schema/seam/taglib']
   - message: Seam UI's `<s:button>` JSF control should be replaced by `<h:button>`..
       There are differences in attributes, for example the _action_ attribute maps
       to _outcome_ and there is no _propagation_ attribute.
@@ -19,9 +19,9 @@
     when:
       or:
       - xml:
-          XPath: //s:button
+          xpath: //s:button
       - xml:
-          XPath: //s:button
+          xpath: //s:button
   - message: Seam UI's `<s:link>` should be replaced by `<h:link>`.. There are differences
       in attributes, for example the _action_ attribute maps to _outcome_ and there
       is no _propagation_ attribute.
@@ -29,42 +29,42 @@
     when:
       or:
       - xml:
-          XPath: //s:link
+          xpath: //s:link
       - xml:
-          XPath: //s:link
+          xpath: //s:link
   - message: There is no direct mapping for `<s:conversationId>` in JSF UI controls.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-4
     when:
       or:
       - xml:
-          XPath: //s:conversationId
+          xpath: //s:conversationId
       - xml:
-          XPath: //s:conversationId
+          xpath: //s:conversationId
   - message: There is no direct mapping for `<s:conversationPropagation>` in JSF UI
       controls
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-5
     when:
       or:
       - xml:
-          XPath: //s:conversationPropagation
+          xpath: //s:conversationPropagation
       - xml:
-          XPath: //s:conversationPropagation
+          xpath: //s:conversationPropagation
   - message: There is no direct mapping for `<s:taskId>` in JSF UI controls
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-6
     when:
       or:
       - xml:
-          XPath: //s:taskId
+          xpath: //s:taskId
       - xml:
-          XPath: //s:taskId
+          xpath: //s:taskId
   - message: There is no direct mapping for `<s:defaultAction>` in JSF UI controls
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-7
     when:
       or:
       - xml:
-          XPath: //s:defaultAction
+          xpath: //s:defaultAction
       - xml:
-          XPath: //s:defaultAction
+          xpath: //s:defaultAction
   - message: Seam UI's `<f:convertDateTime type="time" pattern="kk:mm:ss">` should
       be replaced by `<f:convertDateTime>`.. The format can be configured by setting  the
       locale,. or by setting the context-param `javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE`
@@ -73,133 +73,133 @@
     when:
       or:
       - xml:
-          XPath: //s:convertDateTime
+          xpath: //s:convertDateTime
       - xml:
-          XPath: //s:convertDateTime
+          xpath: //s:convertDateTime
   - message: Seam UI's `<s:convertEntity>` should be replaced by `<f:converter converterId="[yourConverterClass]">`.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-9
     when:
       or:
       - xml:
-          XPath: //s:convertEntity
+          xpath: //s:convertEntity
       - xml:
-          XPath: //s:convertEntity
+          xpath: //s:convertEntity
   - message: There is no direct mapping for `<s:enumItem>` in JSF UI controls
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-10
     when:
       or:
       - xml:
-          XPath: //s:enumItem
+          xpath: //s:enumItem
       - xml:
-          XPath: //s:enumItem
+          xpath: //s:enumItem
   - message: There is no direct mapping for `<s:token>` in JSF UI controls
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-11
     when:
       or:
       - xml:
-          XPath: //s:token
+          xpath: //s:token
       - xml:
-          XPath: //s:token
+          xpath: //s:token
   - message: There is no direct mapping for `<s:formattedText>` in JSF UI controls
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-12
     when:
       or:
       - xml:
-          XPath: //s:formattedText
+          xpath: //s:formattedText
       - xml:
-          XPath: //s:formattedText
+          xpath: //s:formattedText
   - message: There is no direct mapping for `<s:cache>` in JSF UI controls
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-13
     when:
       or:
       - xml:
-          XPath: //s:cache
+          xpath: //s:cache
       - xml:
-          XPath: //s:cache
+          xpath: //s:cache
   - message: There is no direct mapping for `<s:resource>` in JSF UI controls
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-14
     when:
       or:
       - xml:
-          XPath: //s:resource
+          xpath: //s:resource
       - xml:
-          XPath: //s:resource
+          xpath: //s:resource
   - message: There is no direct mapping for `<s:download>` in JSF UI controls
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-15
     when:
       or:
       - xml:
-          XPath: //s:download
+          xpath: //s:download
       - xml:
-          XPath: //s:download
+          xpath: //s:download
   - message: There is no direct mapping for `<s:remote>` in JSF UI controls
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-16
     when:
       or:
       - xml:
-          XPath: //s:remote
+          xpath: //s:remote
       - xml:
-          XPath: //s:remote
+          xpath: //s:remote
   - message: Seam UI's `<s:selectItems>` should be replaced by `<h:selectItems>`.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-17
     when:
       or:
       - xml:
-          XPath: //s:selectItems
+          xpath: //s:selectItems
       - xml:
-          XPath: //s:selectItems
+          xpath: //s:selectItems
   - message: Seam UI's `<s:validate>` should be replaced by `<f:validateBean>`.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-18
     when:
       or:
       - xml:
-          XPath: //s:validate
+          xpath: //s:validate
       - xml:
-          XPath: //s:validate
+          xpath: //s:validate
   - message: Seam UI's `<s:fragment>` should be replaced by `<ui:fragment>`.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-19
     when:
       or:
       - xml:
-          XPath: //s:fragment
+          xpath: //s:fragment
       - xml:
-          XPath: //s:fragment
+          xpath: //s:fragment
   - message: There is no direct mapping for `<s:convertEnum>` in JSF UI controls,
       but JSF 2 has a built-in EnumConverter which can be extended if necessary.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-20
     when:
       or:
       - xml:
-          XPath: //s:convertEnum
+          xpath: //s:convertEnum
       - xml:
-          XPath: //s:convertEnum
+          xpath: //s:convertEnum
   - message: There is no direct mapping for `<s:convertAtomicBoolean>` in JSF UI controls.
       Create a custom converter for a replacement.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-21
     when:
       or:
       - xml:
-          XPath: //s:convertAtomicBoolean
+          xpath: //s:convertAtomicBoolean
       - xml:
-          XPath: //s:convertAtomicBoolean
+          xpath: //s:convertAtomicBoolean
   - message: There is no direct mapping for `<s:convertAtomicInteger>` in JSF UI controls.
       Create a custom converter for a replacement.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-22
     when:
       or:
       - xml:
-          XPath: //s:convertAtomicInteger
+          xpath: //s:convertAtomicInteger
       - xml:
-          XPath: //s:convertAtomicInteger
+          xpath: //s:convertAtomicInteger
   - message: There is no direct mapping for `<s:convertAtomicLong>` in JSF UI controls.
       Create a custom converter for a replacement.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-23
     when:
       or:
       - xml:
-          XPath: //s:convertAtomicLong
+          xpath: //s:convertAtomicLong
       - xml:
-          XPath: //s:convertAtomicLong
+          xpath: //s:convertAtomicLong
   - message: There is no direct mapping for `<s:validateEquality>` in JSF UI controls..
       Use respective `<f:validate[constraint]>` like:. * `<f:validateDoubleRange>`,.
       * `<f:validateLength>`,. * `<f:validateLongRange>`,. * `<f:validateRequired>`.
@@ -207,9 +207,9 @@
     when:
       or:
       - xml:
-          XPath: //s:validateEquality
+          xpath: //s:validateEquality
       - xml:
-          XPath: //s:validateEquality
+          xpath: //s:validateEquality
   - message: There is no direct mapping for `<s:validateAll>` in JSF UI controls,
       but you can achieve a similar effect by using `<f:validateBean>` or [Richfaces](http://richfaces.jboss.org/)
       `<rich:validator>`.
@@ -217,9 +217,9 @@
     when:
       or:
       - xml:
-          XPath: //s:validateAll
+          xpath: //s:validateAll
       - xml:
-          XPath: //s:validateAll
+          xpath: //s:validateAll
   - message: There is no direct mapping for `<s:decorate>` in JSF UI controls, but
       you can achieve the same functionality by using the UIInputContainer and a composite
       container, both of which are demonstrated in the [Open18 migration example](https://github.com/seam/migration/blob/develop/open18_java_ee_6).
@@ -229,9 +229,9 @@
     when:
       or:
       - xml:
-          XPath: //s:decorate
+          xpath: //s:decorate
       - xml:
-          XPath: //s:decorate
+          xpath: //s:decorate
   - message: There is no direct mapping for `<s:div>` in JSF UI controls, but it could
       be done with an `<h:panelGroup layout="block">` or a `<ui:fragment>` containing
       a div.
@@ -239,9 +239,9 @@
     when:
       or:
       - xml:
-          XPath: //s:div
+          xpath: //s:div
       - xml:
-          XPath: //s:div
+          xpath: //s:div
   - message: There is no direct mapping for `<s:span>` in JSF UI controls, but you
       can achieve a similar effect by using `<h:panelGroup>` or a `<ui:fragment>`
       with a span element.
@@ -249,27 +249,27 @@
     when:
       or:
       - xml:
-          XPath: //s:span
+          xpath: //s:span
       - xml:
-          XPath: //s:span
+          xpath: //s:span
   - message: There is no direct mapping for `<s:label>` in JSF UI controls, but `<h:outputLabel>`
       is similar.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-29
     when:
       or:
       - xml:
-          XPath: //s:label
+          xpath: //s:label
       - xml:
-          XPath: //s:label
+          xpath: //s:label
   - message: Use `<h:message for="name" errorClass="invalid">` or [Richfaces](http://richfaces.jboss.org/)
       `<rich:message>`.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-30
     when:
       or:
       - xml:
-          XPath: //s:message
+          xpath: //s:message
       - xml:
-          XPath: //s:message
+          xpath: //s:message
   - message: There is no direct mapping for `<s:fileUpload>` in JSF UI controls. You
       can achieve similar functionality by using [Richfaces](http://richfaces.jboss.org/)
       `<rich:fileUpload>`
@@ -277,15 +277,15 @@
     when:
       or:
       - xml:
-          XPath: //s:fileUpload
+          xpath: //s:fileUpload
       - xml:
-          XPath: //s:fileUpload
+          xpath: //s:fileUpload
   - message: There is no direct mapping for `<s:graphicImage>` in JSF UI controls,
       but you can use `<h:graphicImage>` as Seam extends that JSF UI control.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/java-ee/seam/seam-ui.windup.xml-32
     when:
       or:
       - xml:
-          XPath: //s:graphicImage
+          xpath: //s:graphicImage
       - xml:
-          XPath: //s:graphicImage
+          xpath: //s:graphicImage
