--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.yaml
@@ -6,42 +6,36 @@
     - jboss-eap5
     when:
       xml:
-        XPath: //mbean[@code='org.jboss.cache.TreeCache']
+        xpath: //mbean[@code='org.jboss.cache.TreeCache']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-1
     tag:
     - jboss-eap5
     when:
       xml:
-        XPath: /classloading
+        xpath: /classloading
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-2
     tag:
     - seam
     - jboss-eap5
     when:
       xml:
-        XPath: /sc:components
+        xpath: /sc:components
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-3
     tag:
     - seam
     - jboss-eap5
     when:
       xml:
-        XPath: /sp:pages
+        xpath: /sp:pages
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-4
     tag:
     - seam
     - jboss-eap5
     when:
       xml:
-        XPath: /page
         filepaths:
         - '{*}.page.xml'
-  - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-5
-    tag:
-    - jboss-eap5
-    when:
-      xml:
-        XPath: ""
+        xpath: /page
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-6
     tag:
     - configuration
@@ -50,9 +44,9 @@
     - jboss-eap5
     when:
       xml:
-        XPath: //*[local-name()='jboss-app']
         filepaths:
         - jboss-app.xml
+        xpath: //*[local-name()='jboss-app']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-7
     tag:
     - web
@@ -62,9 +56,9 @@
     - jboss-eap5
     when:
       xml:
-        XPath: //*[local-name()='jboss-web']
         filepaths:
         - jboss-web.xml
+        xpath: //*[local-name()='jboss-web']
   - message: In JBoss EAP 6, the classloading configuration is not done through `jboss-classloading.xml`..
       Since EAP 6 it is of modular nature, based on JBoss Modules.. Learn how to divide
       your application's dependencies into modules. and what dependencies and APIs
@@ -72,16 +66,16 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-8
     when:
       xml:
-        XPath: /jbc:classloading
+        xpath: /jbc:classloading
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-9
     tag:
     - classloading
     - jboss-eap5
     when:
       xml:
-        XPath: //*[local-name()='jboss-deployment-structure']
         filepaths:
         - jboss-deployment-structure.xml
+        xpath: //*[local-name()='jboss-deployment-structure']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-10
     tag:
     - jdbc
@@ -89,24 +83,24 @@
     - jboss-eap5
     when:
       xml:
-        XPath: //*[local-name()='jbosscmp-jdbc']
         filepaths:
         - jbosscmp-jdbc.xml
+        xpath: //*[local-name()='jbosscmp-jdbc']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-11
     tag:
     - descriptor
     - jboss-eap5
     when:
       xml:
-        XPath: //*[local-name()='jboss']
         filepaths:
         - jboss.xml
+        xpath: //*[local-name()='jboss']
   - message: '`java:/jaas/` is a JBoss EAP `security-domain` URI.. Remove the `java:/jaas/`
       prefix for `security-domain` elements in AS 7 / EAP 6.'
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-12
     when:
       xml:
-        XPath: //*[local-name()='security-domain' and starts-with(text(), 'java:/jaas/')]
+        xpath: //*[local-name()='security-domain' and starts-with(text(), 'java:/jaas/')]
   - message: Before JBoss EAP 6, authentication security domains and login modules
       could be configured in a `login-config.xml` file.. JBoss EAP 6+ does not support
       the `login-config.xml` descriptor. Security is now configured inside the server
@@ -114,17 +108,17 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-13
     when:
       xml:
-        XPath: //*[local-name()='policy']
         filepaths:
         - login-config.xml
+        xpath: //*[local-name()='policy']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-14
     tag:
     - jboss-eap5
     when:
       xml:
-        XPath: //*[local-name()='ejb-jar']
         filepaths:
         - jboss-ejb3.xml
+        xpath: //*[local-name()='ejb-jar']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-15
     tag:
     - jboss-ws
@@ -133,12 +127,12 @@
     - jboss-eap5
     when:
       xml:
-        XPath: //*[local-name()='webservices']
         filepaths:
         - jboss-webservices.xml
+        xpath: //*[local-name()='webservices']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/jboss-eap5/jboss-eap5-xml.windup.xml-16
     tag:
     - jboss-eap5
     when:
       xml:
-        XPath: //server/mbean[@code='org.jboss.mq.server.jmx.Queue']
+        xpath: //server/mbean[@code='org.jboss.mq.server.jmx.Queue']
