--- a/analyzer-lsp-rules/rules/rules-reviewed/eapxp/thorntail/replace_thorntail_boms.mta.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eapxp/thorntail/replace_thorntail_boms.mta.yaml
@@ -5,10 +5,10 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eapxp/thorntail/replace_thorntail_boms.mta.xml-0
     when:
       xml:
-        XPath: /m:project/m:dependencyManagement/m:dependencies/m:dependency[m:groupId/text()
-          = 'io.thorntail' and m:artifactId/text() = 'bom']
         filepaths:
         - pom.xml
+        xpath: /m:project/m:dependencyManagement/m:dependencies/m:dependency[m:groupId/text()
+          = 'io.thorntail' and m:artifactId/text() = 'bom']
   - message: If you migrate your application to JBoss EAP XP 2.0 (or later), and want
       to ensure its Maven building, running or testing works as expected, replace
       Thorntail BOM `io.thorntail:bom-certified` with JBoss EAP XP MicroProfile BOM
@@ -16,7 +16,7 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eapxp/thorntail/replace_thorntail_boms.mta.xml-1
     when:
       xml:
-        XPath: /m:project/m:dependencyManagement/m:dependencies/m:dependency[m:groupId/text()
-          = 'io.thorntail' and m:artifactId/text() = 'bom-certified']
         filepaths:
         - pom.xml
+        xpath: /m:project/m:dependencyManagement/m:dependencies/m:dependency[m:groupId/text()
+          = 'io.thorntail' and m:artifactId/text() = 'bom-certified']
