--- a/analyzer-lsp-rules/rules/rules-reviewed/fuse/sonicesb/xml-sonic-esb.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/fuse/sonicesb/xml-sonic-esb.windup.yaml
@@ -3,4 +3,4 @@
     - sonic-esb
     when:
       xml:
-        XPath: /*[local-name()='serviceType']
+        xpath: /*[local-name()='serviceType']
