--- a/analyzer-lsp-rules/rules/rules-reviewed/quarkus/springboot/springboot-di-to-quarkus.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/quarkus/springboot/springboot-di-to-quarkus.windup.yaml
@@ -11,6 +11,6 @@
     when:
       or:
       - xml:
-          XPath: //*/b:bean/@class
+          xpath: //*/b:bean/@class
       - xml:
-          XPath: //*/c:annotation-config
+          xpath: //*/c:annotation-config
