--- a/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/connect-technology-usage.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/connect-technology-usage.windup.yaml
@@ -78,5 +78,5 @@
           location: VARIABLE_DECLARATION
           pattern: javax.resource.{*}
       - xml:
-          XPath: //*[local-name()='jms-jca-provider']
+          xpath: //*[local-name()='jms-jca-provider']
       - file: ra.xml
