--- a/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/security-technology-usage.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/security-technology-usage.windup.yaml
@@ -10,10 +10,10 @@
           location: ANNOTATION
           pattern: javax.annotation.security.{*}
       - xml:
-          XPath: //*[local-name() = 'login-config']/*[local-name() = 'realm-name']
           filepaths:
           - web.xml
+          xpath: //*[local-name() = 'login-config']/*[local-name() = 'realm-name']
       - xml:
-          XPath: //*[local-name() = 'login-config']/*[local-name() = 'realm']
           filepaths:
           - '{*}ejb-jar.xml'
+          xpath: //*[local-name() = 'login-config']/*[local-name() = 'realm']
