--- a/analyzer-lsp-rules/rules/rules-reviewed/camel3/camel2/xml-dsl-changes.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/camel3/camel2/xml-dsl-changes.windup.yaml
@@ -3,77 +3,77 @@
     when:
       or:
       - xml:
-          XPath: //*[(count(b:zip)+count(b:gzip)) >0]
+          xpath: //*[(count(b:zip)+count(b:gzip)) >0]
       - xml:
-          XPath: //*[(count(c:gzip)+count(c:zip)) > 0]
+          xpath: //*[(count(c:gzip)+count(c:zip)) > 0]
   - message: '`custom` load balancer was renamed to `customLoadBalancer`'
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/camel3/camel2/xml-dsl-changes.windup.xml-1
     when:
       or:
       - xml:
-          XPath: //*/b:route/b:loadBalance/b:custom
+          xpath: //*/b:route/b:loadBalance/b:custom
       - xml:
-          XPath: //*/c:route/c:loadBalance/c:custom
+          xpath: //*/c:route/c:loadBalance/c:custom
   - message: '`zipFile` data format was renamed to `zipfile`'
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/camel3/camel2/xml-dsl-changes.windup.xml-2
     when:
       or:
       - xml:
-          XPath: //*/b:marshal/b:zipFile
+          xpath: //*/b:marshal/b:zipFile
       - xml:
-          XPath: //*/b:unmarshal/b:zipFile
+          xpath: //*/b:unmarshal/b:zipFile
       - xml:
-          XPath: //*/c:marshal/c:zipFile
+          xpath: //*/c:marshal/c:zipFile
       - xml:
-          XPath: //*/c:unmarshal/c:zipFile
+          xpath: //*/c:unmarshal/c:zipFile
   - message: '`keyOrTrustStoreParametersId` attribute was renamed to `keyOrTrustStoreParametersRef`'
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/camel3/camel2/xml-dsl-changes.windup.xml-3
     when:
       or:
       - xml:
-          XPath: //*/b:secureXML/@keyOrTrustStoreParametersId
+          xpath: //*/b:secureXML/@keyOrTrustStoreParametersId
       - xml:
-          XPath: //*/c:secureXML/@keyOrTrustStoreParametersId
+          xpath: //*/c:secureXML/@keyOrTrustStoreParametersId
   - message: Hystrix circuit breaker has been generalized as circuit breaker. Use
       `circuitBreaker`. instead of `hystrix'.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/camel3/camel2/xml-dsl-changes.windup.xml-4
     when:
       or:
       - xml:
-          XPath: //b:hystrix
+          xpath: //b:hystrix
       - xml:
-          XPath: //*/c:hystrix
+          xpath: //*/c:hystrix
   - message: Use `completionSizeExpression` instead of `completionSize`. Expressions
       (not the attributes) for. setting correlation size/timeout were renamed.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/camel3/camel2/xml-dsl-changes.windup.xml-5
     when:
       or:
       - xml:
-          XPath: //*/b:aggregate/b:completionSize
+          xpath: //*/b:aggregate/b:completionSize
       - xml:
-          XPath: //*/c:aggregate/c:completionSize
+          xpath: //*/c:aggregate/c:completionSize
   - message: Use `completionTimeoutExpression` instead of `completionTimeout`. Expressions
       (not the. attributes) for. setting correlation size/timeout were renamed.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/camel3/camel2/xml-dsl-changes.windup.xml-6
     when:
       or:
       - xml:
-          XPath: //*/b:aggregate/b:completionTimeout
+          xpath: //*/b:aggregate/b:completionTimeout
       - xml:
-          XPath: //*/c:aggregate/c:completionTimeout
+          xpath: //*/c:aggregate/c:completionTimeout
   - message: The attribute `headerName` was renamed to `name`.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/camel3/camel2/xml-dsl-changes.windup.xml-7
     when:
       or:
       - xml:
-          XPath: //*/b:setHeader/@headerName
+          xpath: //*/b:setHeader/@headerName
       - xml:
-          XPath: //*/c:setHeader/@headerName
+          xpath: //*/c:setHeader/@headerName
   - message: The attribute `propertyName` was renamed to `name`.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/camel3/camel2/xml-dsl-changes.windup.xml-8
     when:
       or:
       - xml:
-          XPath: //*/b:setProperty/@propertyName
+          xpath: //*/b:setProperty/@propertyName
       - xml:
-          XPath: //*/c:setProperty/@propertyName
+          xpath: //*/c:setProperty/@propertyName
