--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.yaml
@@ -4,7 +4,7 @@
     - weblogic
     when:
       xml:
-        XPath: /*[local-name()='weblogic-application']
+        xpath: /*[local-name()='weblogic-application']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-1
     tag:
     - database
@@ -13,7 +13,7 @@
     - weblogic
     when:
       xml:
-        XPath: /*[local-name()='weblogic-rdbms-jar']
+        xpath: /*[local-name()='weblogic-rdbms-jar']
   - message: The WebLogic `<delay-updates-until-end-of-tx>` configuration element,
       which defaults to `true`, is used for performance reasons to delay updates to
       the persistent store of all beans until the end of the transaction. When set
@@ -25,26 +25,26 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-2
     when:
       xml:
-        XPath: //*[local-name()='delay-updates-until-end-of-tx']/text()
+        xpath: //*[local-name()='delay-updates-until-end-of-tx']/text()
   - message: The elements of proprietary `weblogic-ejb-jar.xml` descriptor need to
       be mapped to the `jboss-ejb3.xml` one according to the attached knowledge article.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-3
     when:
       or:
       - xml:
-          XPath: /weblogic-ejb-jar
+          xpath: /weblogic-ejb-jar
       - xml:
-          XPath: /wl9:weblogic-ejb-jar
+          xpath: /wl9:weblogic-ejb-jar
       - xml:
-          XPath: /wl10:weblogic-ejb-jar
+          xpath: /wl10:weblogic-ejb-jar
       - xml:
-          XPath: /wls:weblogic-ejb-jar
+          xpath: /wls:weblogic-ejb-jar
   - message: Replace WebLogic proprietary configuration by Java EE annotation `@AccessTimeout`..
       The equivalent usage is `@AccessTimeout(value= -1)`
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-4
     when:
       xml:
-        XPath: //*[local-name() = 'allow-concurrent-calls' and translate(text(),'TRUE','true')
+        xpath: //*[local-name() = 'allow-concurrent-calls' and translate(text(),'TRUE','true')
           = 'true' ]
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-5
     tag:
@@ -52,21 +52,21 @@
     - weblogic
     when:
       xml:
-        XPath: /weblogic-wsee-standaloneclient |/wl10:weblogic-wsee-standaloneclient
+        xpath: /weblogic-wsee-standaloneclient |/wl10:weblogic-wsee-standaloneclient
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-6
     tag:
     - wsdl
     - weblogic
     when:
       xml:
-        XPath: /java-wsdl-mapping
+        xpath: /java-wsdl-mapping
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-7
     tag:
     - webservice
     - weblogic
     when:
       xml:
-        XPath: /webservice-policy-ref | /wl:webservice-policy-ref | /wl9:webservice-policy-ref
+        xpath: /webservice-policy-ref | /wl:webservice-policy-ref | /wl9:webservice-policy-ref
   - message: WebLogic webservices can be migrated to `jboss-webservices.xml` descriptor
       or to a Java EE standard Annotation based configuration. Reference the JBoss
       EAP product documentation for more information.
@@ -79,12 +79,12 @@
       - as: webservices
         ignore: true
         xml:
-          XPath: /weblogic-webservices | /wl:weblogic-webservices | /wl9:weblogic-webservices
+          xpath: /weblogic-webservices | /wl:weblogic-webservices | /wl9:weblogic-webservices
       - as: webservices-types
         from: webservices
         ignore: true
         xml:
-          XPath: //webservice-type | //wl:webservice-type | //wl9:webservice-type
+          xpath: //webservice-type | //wl:webservice-type | //wl9:webservice-type
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-9
     tag:
     - jms
@@ -92,28 +92,22 @@
     - weblogic
     when:
       xml:
-        XPath: /*[local-name()='weblogic-jms']
+        xpath: /*[local-name()='weblogic-jms']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-10
     tag:
     - web-app
     - weblogic
     when:
       xml:
-        XPath: /bea:weblogic-web-app | /wlso:weblogic-web-app | /wls:weblogic-web-app
+        xpath: /bea:weblogic-web-app | /wlso:weblogic-web-app | /wls:weblogic-web-app
           | /weblogic-web-app
-  - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-11
-    tag:
-    - weblogic
-    when:
-      xml:
-        XPath: ""
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-12
     tag:
     - webservice
     - weblogic
     when:
       xml:
-        XPath: /wsdd:type-mapping
+        xpath: /wsdd:type-mapping
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-13
     tag:
     - webservice
@@ -121,7 +115,7 @@
     - weblogic
     when:
       xml:
-        XPath: /wlw:wlw-config
+        xpath: /wlw:wlw-config
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-14
     tag:
     - webservice
@@ -130,7 +124,7 @@
       as: default
       ignore: true
       xml:
-        XPath: /project/taskdef[@classname='weblogic.ant.taskdefs.webservices.servicegen.ServiceGenTask']
+        xpath: /project/taskdef[@classname='weblogic.ant.taskdefs.webservices.servicegen.ServiceGenTask']
           | /project/taskdef[@classname='weblogic.ant.taskdefs.webservices.javaschema.JavaSchema']
           | /project/taskdef[@classname='weblogic.ant.taskdefs.webservices.autotype.JavaSource2DD']
           | /project/taskdef[@classname='weblogic.ant.taskdefs.webservices.clientgen.ClientGenTask']
@@ -140,14 +134,14 @@
     - weblogic
     when:
       xml:
-        XPath: /wl:annotation-manifest | /annotation-manifest
+        xpath: /wl:annotation-manifest | /annotation-manifest
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-16
     tag:
     - configuration
     - weblogic
     when:
       xml:
-        XPath: /wls:deployment-plan
+        xpath: /wls:deployment-plan
   - message: The WebLogic `<trans-timeout-seconds>` configuration element sets the
       maximum duration for an EJB's container-initiated transactions, in seconds,
       after which the transaction is rolled back.. In JBoss EAP 6+, you can achieve
@@ -155,4 +149,4 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap6/weblogic/weblogic-xml-descriptors.windup.xml-17
     when:
       xml:
-        XPath: //*[local-name()='trans-timeout-seconds']/text()
+        xpath: //*[local-name()='trans-timeout-seconds']/text()
