--- a/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.yaml
@@ -3,32 +3,32 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-0
     when:
       xml:
-        XPath: /*[local-name()='ejb-jar']/*[local-name()='assembly-descriptor']/*[local-name()='clustering']/*[local-name()='clustered']
         filepaths:
         - jboss-ejb3.xml
+        xpath: /*[local-name()='ejb-jar']/*[local-name()='assembly-descriptor']/*[local-name()='clustering']/*[local-name()='clustered']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-1
     tag:
     - seam2
     - jboss-eap5
     when:
       xml:
-        XPath: /sc:components
+        xpath: /sc:components
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-2
     tag:
     - seam
     - jboss-eap5
     when:
       xml:
-        XPath: /sp:pages
+        xpath: /sp:pages
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-3
     tag:
     - seam
     - jboss-eap5
     when:
       xml:
-        XPath: /page
         filepaths:
         - '{*}.page.xml'
+        xpath: /page
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-4
     tag:
     - web
@@ -38,9 +38,9 @@
     - jboss-eap5
     when:
       xml:
-        XPath: //*[local-name()='jboss-web']
         filepaths:
         - jboss-web.xml
+        xpath: //*[local-name()='jboss-web']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-5
     tag:
     - jdbc
@@ -49,17 +49,17 @@
     - jpa
     when:
       xml:
-        XPath: //*[local-name()='jbosscmp-jdbc']
         filepaths:
         - jbosscmp-jdbc.xml
+        xpath: //*[local-name()='jbosscmp-jdbc']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-6
     tag:
     - jboss-eap5
     when:
       xml:
-        XPath: //*[local-name()='ejb-jar']
         filepaths:
         - jboss-ejb3.xml
+        xpath: //*[local-name()='ejb-jar']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-7
     tag:
     - jboss-ws
@@ -68,9 +68,9 @@
     - jboss-eap5
     when:
       xml:
-        XPath: //*[local-name()='webservices']
         filepaths:
         - jboss-webservices.xml
+        xpath: //*[local-name()='webservices']
   - message: CMP entity beans are no longer supported in JBoss EAP 7. User is requested
       to use JPA entities that fully replaced the functionality provided by CMP beans..
       CMP configuration provided in this ejb-jar.xml should be configured using JPA
@@ -78,12 +78,12 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-8
     when:
       xml:
-        XPath: /ejb-jar/enterprise-beans/entity[persistence-type = 'Container'] |
+        filepaths:
+        - ejb-jar.xml
+        xpath: /ejb-jar/enterprise-beans/entity[persistence-type = 'Container'] |
           /jee:ejb-jar/jee:enterprise-beans/jee:entity[jee:persistence-type = 'Container']
           | /j2e:ejb-jar/j2e:enterprise-beans/j2e:entity[j2e:persistence-type = 'Container']
           | /jcp:ejb-jar/jcp:enterprise-beans/jcp:entity[jcp:persistence-type = 'Container']
-        filepaths:
-        - ejb-jar.xml
   - message: BMP entity beans are no longer supported in JBoss EAP 7. User is requested
       to use JPA entities that fully replaced the functionality provided by BMP beans..
       BMP configuration provided in this ejb-jar.xml should be configured using JPA
@@ -91,36 +91,36 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-9
     when:
       xml:
-        XPath: /ejb-jar/enterprise-beans/entity[persistence-type = 'Bean'] | /jee:ejb-jar/jee:enterprise-beans/jee:entity[jee:persistence-type
+        filepaths:
+        - ejb-jar.xml
+        xpath: /ejb-jar/enterprise-beans/entity[persistence-type = 'Bean'] | /jee:ejb-jar/jee:enterprise-beans/jee:entity[jee:persistence-type
           = 'Bean'] | /j2e:ejb-jar/j2e:enterprise-beans/j2e:entity[j2e:persistence-type
           = 'Bean'] | /jcp:ejb-jar/jcp:enterprise-beans/jcp:entity[jcp:persistence-type
           = 'Bean']
-        filepaths:
-        - ejb-jar.xml
   - message: JBoss Web was replaced by Undertow, which does not contain support for
       the Valve functionality. It may be needed to migrate to Undertow handlers.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-10
     when:
       xml:
-        XPath: /jboss-web/valve | /jboss:jboss-web/jboss:valve
         filepaths:
         - jboss-web.xml
+        xpath: /jboss-web/valve | /jboss:jboss-web/jboss:valve
   - message: JAX-RPC support was removed in JBoss EAP 7. All the RPC calls will need
       to be migrated to JAX-WS.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-11
     when:
       or:
       - xml:
-          XPath: /webservices/webservice-description/jaxrpc-mapping-file | /jee:webservices/jee:webservice-description/jee:jaxrpc-mapping-file
+          xpath: /webservices/webservice-description/jaxrpc-mapping-file | /jee:webservices/jee:webservice-description/jee:jaxrpc-mapping-file
             | /jcp:webservices/jcp:webservice-description/jcp:jaxrpc-mapping-file
             | /j2ee:webservices/j2ee:webservice-description/j2ee:jaxrpc-mapping-file
       - xml:
-          XPath: /ejb-jar/enterprise-beans/session/service-ref/jaxrpc-mapping-file
+          xpath: /ejb-jar/enterprise-beans/session/service-ref/jaxrpc-mapping-file
             | /jee:ejb-jar/jee:enterprise-beans/jee:session/jee:service-ref/jee:jaxrpc-mapping-file
             | /jcp:ejb-jar/jcp:enterprise-beans/jcp:session/jcp:service-ref/jcp:jaxrpc-mapping-file
             | /j2ee:ejb-jar/j2ee:enterprise-beans/j2ee:session/j2ee:service-ref/j2ee:jaxrpc-mapping-file
       - xml:
-          XPath: /java-wsdl-mapping | /jee:java-wsdl-mapping | /jcp:java-wsdl-mapping
+          xpath: /java-wsdl-mapping | /jee:java-wsdl-mapping | /jcp:java-wsdl-mapping
             | /j2ee:java-wsdl-mapping
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-12
     tag:
@@ -132,25 +132,25 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-13
     when:
       xml:
-        XPath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='replication-trigger']
         filepaths:
         - jboss-web.xml
+        xpath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='replication-trigger']
   - message: The EAP 7 Web Session Clustering configuration deprecates element `replication-mode`
       element without replacement in `jboss-web.xml` file descriptor.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-14
     when:
       xml:
-        XPath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='replication-mode']
         filepaths:
         - jboss-web.xml
+        xpath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='replication-mode']
   - message: The EAP 7 Web Session Clustering configuration deprecates `backups` element
       without replacement in `jboss-web.xml` file descriptor.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-15
     when:
       xml:
-        XPath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='backups']
         filepaths:
         - jboss-web.xml
+        xpath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='backups']
   - message: The EAP 7 Web Session Clustering configuration deprecates `use-jk` element
       without replacement in `jboss-web.xml` file descriptor.. Previously by specifying
       `use-jk` element, the instance-id of the node handling a given request was appended
@@ -160,9 +160,9 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-16
     when:
       xml:
-        XPath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='use-jk']
         filepaths:
         - jboss-web.xml
+        xpath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='use-jk']
   - message: The EAP 7 Web Session Clustering configuration deprecates `max-unreplicated-interval`
       element in `jboss-web.xml` file descriptor.. Previously, this configuration
       option was an optimization that would prevent the replication of a session’s
@@ -174,9 +174,9 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-17
     when:
       xml:
-        XPath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='max-unreplicated-interval']
         filepaths:
         - jboss-web.xml
+        xpath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='max-unreplicated-interval']
   - message: The EAP 7 Web Session Clustering configuration deprecates `snapshot-mode`
       element in `jboss-web.xml` file descriptor.. Previously, one could configure
       `snapshot-mode` as INSTANT or INTERVAL. Infinispan’s replication queue renders
@@ -184,9 +184,9 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-18
     when:
       xml:
-        XPath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='snapshot-mode']
         filepaths:
         - jboss-web.xml
+        xpath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='snapshot-mode']
   - message: The EAP 7 Web Session Clustering configuration removed `snapshot-interval`
       element from `jboss-web.xml` file descriptor.. This option was only relevant
       for `<snapshot-mode>INTERVAL</snapshot-mode>`. Since `snapshot-mode` is no longer
@@ -194,9 +194,9 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-19
     when:
       xml:
-        XPath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='snapshot-interval']
         filepaths:
         - jboss-web.xml
+        xpath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='snapshot-interval']
   - message: The EAP 7 Web Session Clustering configuration deprecates `session-notification-policy`
       element in `jboss-web.xml` file descriptor.. Previously `session-notification-policy`
       element defined a policy for triggering session events.. In the new implementation,
@@ -204,9 +204,9 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-20
     when:
       xml:
-        XPath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='session-notification-policy']
         filepaths:
         - jboss-web.xml
+        xpath: /*[local-name()='jboss-web']/*[local-name()='replication-config']/*[local-name()='session-notification-policy']
   - message: The EAP 7 Web Session Clustering configuration deprecates `passivation-config`
       element and its sub-elements `use-session-passivation`, `passivation-min-idle-time`
       and `passivation-max-idle-time` completely in `jboss-web.xml` file descriptor..
@@ -219,9 +219,9 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-21
     when:
       xml:
-        XPath: /*[local-name()='jboss-web']/*[local-name()='passivation-config']
         filepaths:
         - jboss-web.xml
+        xpath: /*[local-name()='jboss-web']/*[local-name()='passivation-config']
   - message: The EAP 7 Web Session Clustering configuration changed `max-active-sessions`
       element meaning in `jboss-web.xml` file descriptor.. Previously, session creation
       would fail if an additional session would cause the number of active sessions
@@ -233,6 +233,6 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap5and6/jboss-eap5and6to7-xml.windup.xml-22
     when:
       xml:
-        XPath: /*[local-name()='jboss-web']/*[local-name()='max-active-sessions']
         filepaths:
         - jboss-web.xml
+        xpath: /*[local-name()='jboss-web']/*[local-name()='max-active-sessions']
