--- a/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap6/hibernate4-xml.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap6/hibernate4-xml.windup.yaml
@@ -28,9 +28,9 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/hibernate4-xml.windup.xml-2
     when:
       xml:
-        XPath: //generator/@class[windup:matches(self::node(), '{generator}')]
         filepaths:
         - '{*}.hbm.xml'
+        xpath: //generator/@class[windup:matches(self::node(), '{generator}')]
   - message: Since Hibernate 5, the `org.hibernate.hql.spi.TemporaryTableBulkIdStrategy`
       class was replaced by `org.hibernate.hql.spi.id.global.GlobalTemporaryTableBulkIdStrategy`
       and `org.hibernate.hql.spi.id.local.LocalTemporaryTableBulkIdStrategy`.
@@ -45,9 +45,9 @@
       - as: cfg
         ignore: true
         xml:
-          XPath: //property[text() = 'org.hibernate.hql.spi.TemporaryTableBulkIdStrategy']
           filepaths:
           - hibernate.cfg.xml
+          xpath: //property[text() = 'org.hibernate.hql.spi.TemporaryTableBulkIdStrategy']
   - message: Since Hibernate 5, the `org.hibernate.hql.spi.PersistentTableBulkIdStrategy`
       class was moved to new package and you should use it as `org.hibernate.hql.spi.id.persistent.PersistentTableBulkIdStrategy`.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eap7/eap6/hibernate4-xml.windup.xml-4
@@ -61,6 +61,6 @@
       - as: cfg
         ignore: true
         xml:
-          XPath: //property[text() = 'org.hibernate.hql.spi.PersistentTableBulkIdStrategy']
           filepaths:
           - hibernate.cfg.xml
+          xpath: //property[text() = 'org.hibernate.hql.spi.PersistentTableBulkIdStrategy']
