--- a/analyzer-lsp-rules/rules/rules-reviewed/eapxp/thorntail/replace_thorntail_maven_plugin.mta.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eapxp/thorntail/replace_thorntail_maven_plugin.mta.yaml
@@ -4,7 +4,7 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/eapxp/thorntail/replace_thorntail_maven_plugin.mta.xml-0
     when:
       xml:
-        XPath: //m:plugin[m:groupId/text() = 'io.thorntail' and m:artifactId/text()
-          = 'thorntail-maven-plugin']
         filepaths:
         - pom.xml
+        xpath: //m:plugin[m:groupId/text() = 'io.thorntail' and m:artifactId/text()
+          = 'thorntail-maven-plugin']
