--- a/analyzer-lsp-rules/rules/rules-reviewed/quarkus/springboot/springboot-integration-to-quarkus.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/quarkus/springboot/springboot-integration-to-quarkus.windup.yaml
@@ -3,7 +3,7 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/quarkus/springboot/springboot-integration-to-quarkus.windup.xml-0
     when:
       xml:
-        XPath: //*/int:channel
+        xpath: //*/int:channel
   - message: SpringBoot IntegrationFlow class usage is not supported. A migration
       to Apache Camel route using From is mandatory.
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/quarkus/springboot/springboot-integration-to-quarkus.windup.xml-1
