--- a/analyzer-lsp-rules/rules/rules-reviewed/quarkus/springboot/springboot-plugins-to-quarkus.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/quarkus/springboot/springboot-plugins-to-quarkus.windup.yaml
@@ -4,6 +4,6 @@
     ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/quarkus/springboot/springboot-plugins-to-quarkus.windup.xml-0
     when:
       xml:
-        XPath: /m:project/m:build/m:plugins/m:plugin[m:artifactId = 'spring-boot-maven-plugin']
         filepaths:
         - pom.xml
+        xpath: /m:project/m:build/m:plugins/m:plugin[m:artifactId = 'spring-boot-maven-plugin']
