--- a/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/javaee-technology-usage.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/javaee-technology-usage.windup.yaml
@@ -1,15 +1,15 @@
 - - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/technology-usage/javaee-technology-usage.windup.xml-0
     when:
       xml:
-        XPath: //*[local-name() = 'batch-artifacts']
         filepaths:
         - batch.xml
+        xpath: //*[local-name() = 'batch-artifacts']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/technology-usage/javaee-technology-usage.windup.xml-1
     when:
       xml:
-        XPath: //*[local-name() = 'job']
         filepaths:
         - '{*}.xml'
+        xpath: //*[local-name() = 'job']
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/technology-usage/javaee-technology-usage.windup.xml-4
     when:
       or:
